# rubix-redis-bridge

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  biome.json  cliff.toml  deny.toml  docker-compose.yml  package.json  pnpm-lock.yaml  release.toml  tokens.example.json
.github/workflows/: ci.yml  codeql.yml  dependabot.yml  package.yml  release.yml  test.yml
docs/: THREAT_MODEL.md
scripts/: database-test.ps1  release-prep.ps1
src/: app.rs  client_ip.rs  commands.rs  config.rs  main.rs  metrics.rs  redis_value.rs  security.rs
src/app/: auth.rs  auth_tests.rs  error.rs  handlers.rs  lockout.rs  lockout_tests.rs  mod.rs  realtime.rs  redis_error.rs  redis_exec.rs  redis_response.rs  redis_response_tests.rs  redis_value.rs  redis_value_tests.rs  response.rs  response_tests.rs  state.rs
src/auth/: auth.rs  auth_tests.rs  lockout.rs  lockout_tests.rs  main.rs  mod.rs  request.rs
src/client/: headers.rs  headers_tests.rs  mod.rs  parse.rs  parse_tests.rs  trusted.rs  trusted_tests.rs
src/config/: env.rs  hash.rs  hash_tests.rs  mod.rs  targets.rs  targets_tests.rs  token.rs  token_hash.rs  token_hash_tests.rs  token_type.rs
src/metrics/: collectors.rs  connection.rs  guard.rs  mod.rs
src/redis/: error.rs  execute.rs  mod.rs  response.rs  value.rs
src/security/: args.rs  commands.rs  deny.rs  mod.rs  policy.rs  script.rs  tests.rs  types.rs
src/tests/: lockout.rs  mod.rs  parse.rs  security.rs  trusted.rs
src/tests/app/: mod.rs  realtime.rs  response.rs
tests/sdk/: upstash.test.mjs
(+12 files in other folders)
