[package]
name = "rubix-redis-bridge"
version = "0.3.2"
authors = ["rubixvi"]
license = "MIT"
repository = "https://github.com/rubix-studios-pty-ltd/rubix-redis-bridge"
edition = "2024"
rust-version = "1.95.0"
publish = false

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json", "tokio"] }
base64 = "0.22"
prometheus = "0.14"
redis = { version = "1.3.0", features = ["aio", "tokio-comp", "connection-manager", "tokio-rustls-comp", "num-bigint"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "sync", "time"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.7", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
num-bigint = "0.4"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
